--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Twój miły generator 💖</title>
+  <title>Misiolinowy mood booster 💖</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -40,13 +40,13 @@
   </style>
 </head>
 <body>
-  <h1>💌 Twój miły generator 💌</h1>
-  <div id="quote">Kliknij, by zobaczyć coś miłego :)</div>
-  <button onclick="generateQuote()">Losuj!</button>
+  <h1>💌 Misiolinowy mood booster 💌</h1>
+  <div id="quote">Click me! But gently! :)</div>
+  <button onclick="generateQuote()">chop chop!</button>
 
   <script>
     const correctPassword = "Misio123";
-    const password = prompt("Wpisz hasło:");
+    const password = prompt("you shall not pass:");
 
     if (password === correctPassword) {
       document.body.style.display = "block";
@@ -55,13 +55,18 @@
     }
 
     const quotes = [
-      "Jesteś moim ulubionym człowiekiem 🥰",
-      "Dziękuję, że jesteś 💛",
-      "Twój uśmiech rozświetla mi dzień 🌞",
-      "Nie ma drugiej takiej osoby jak Ty 💎",
-      "Z Tobą wszystko jest lepsze ✨",
-      "Nawet jak jest ciężko, wiem że damy radę razem 💪",
-      "Jesteś moim spokojem i słońcem jednocześnie 🌼"
+      "Dobra z bobra, lepsza z wieprza! 🥰",
+      "LOS UNIVERSOSKIIIIIIII ❤️",
+      "Kocham Twoje salmonowe fitsisy 🐡",
+      "Do you know what Myszolin is? It's a mysz from Shaolin 🐭",
+      "What is the difference between krowa and mini krowa? Apparently mini krowa drinks kawusia z mlekiem🐄",
+      "We are gonna be what? RIPPED RIPPED RIPPED 💪",
+      "Do you know what Myszołówek is? It's Mysz made out of ołówek 🐭",  
+  "Jesteś okruszkiem miłości na patyku ✨",
+  "Kogucik na wełnianych nóżkach 💖",
+  "You are a funiard - it's a spaniard that is funny 🥳",
+  "Show me boobies 😎",
+
     ];
 
     function generateQuote() {
