--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <h1>💌 Misiolinowy mood booster 💌</h1>
-  <div id="quote">Click me! But gently! :)</div>
+  <div id="quote">NIESPODZIANKA! :)</div>
   <button onclick="generateQuote()">chop chop!</button>
 
   <script>
